# ClimateRiskResourceBehavior

./: .gitmodules  .pre-commit-config.yaml  CITATION  LICENSE  README.md  cprs.aux  environment.yml  pyproject.toml  setup.cfg
.pytask/: file_hashes.json  pytask.sqlite3
bld/data/: ALL_CLEANED.arrow  anticipation_clean.arrow  baseline_clean.arrow  data_clean.arrow  questionnaire_clean.arrow  scarcity_clean.arrow  shock_clean.arrow
bld/latex/: ClimateRiskResourceBehavior.blg  ClimateRiskResourceBehavior.fdb_latexmk  ClimateRiskResourceBehavior.fls  ClimateRiskResourceBehavior.run.xml  ClimateRiskResourceBehavior_pres.aux  ClimateRiskResourceBehavior_pres.blg  ClimateRiskResourceBehavior_pres.fdb_latexmk  ClimateRiskResourceBehavior_pres.fls  ClimateRiskResourceBehavior_pres.run.xml  cprs.aux  cprs.bbl  cprs.bcf  cprs.blg  cprs.fdb_latexmk  cprs.fls  cprs.out  cprs.run.xml  cprs.toc  cprs_pres.aux  cprs_pres.blg  cprs_pres.fdb_latexmk  cprs_pres.fls  cprs_pres.run.xml
bld/tables/: 1. max harvest table.tex  2. treatment split.tex  4. expected value of trees.tex  5. round decision.tex  7. anticipation expected value calculation.tex
final-project-Patty-pat-1.git/: config  packed-refs
otree_game_codes/: settings.py
otree_game_codes/CS1_Intro/: CS1_Example.html  CS1_Welcome.html  P01Code.html  P03InstructionsN.html  P04Example.html  P05ComprehensionCheck.html  P06ComprehensionSuccess.html  __init__.py  tests.py
paper/: ClimateRiskResourceBehavior.tex  ClimateRiskResourceBehavior_pres.tex  cprs.tex  cprs_pres.tex  no.tex  refs.bib  task_paper.py
src/cprs/: config.py  (+3 more)
(+118 files in other folders)
