[metadata]
name = cprs
description = cprs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Patty-pat/cprs
author = Patricia Puspitasari
author_email = s75ppusp@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Patty-pat/cprs
    Documentation = https://github.com/Patty-pat/cprs
    Github = https://github.com/Patty-pat/cprs
    Tracker = https://github.com/Patty-pat/cprs/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/cprs/_version.py
